--- a/parking-management-server/package.json
+++ b/parking-management-server/package.json
@@ -2,13 +2,15 @@
   "name": "parking-management-server",
   "version": "1.0.0",
   "description": "this is a backend for parking management system",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "sunny",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
